# na

./: .gitignore  LICENSE  Makefile  README.md  a.ipynb  build_vectorstore.py  main.py  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
news_research_analyst/: __init__.py  dataset.py  features.py  plots.py
news_research_analyst/modeling/: predict.py  train.py
notebooks/: faiss.ipynb
